--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -96,7 +96,7 @@
                 </h1>
                 {% comment %} <p>{{personal.desc}}</p> {% endcomment %}
                 <div class="btn-con">
-                    <a href="/resume/resume.pdf" download class="main-btn">
+                    <a href="/media/{{personal.resume}}" target="_blank" class="main-btn">
                         <span class="btn-text">Download Resume</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
@@ -107,7 +107,7 @@
     <main>
         <section class="container about" id="about">
             <div class="main-title">
-                <h2>About <span>me</span><span class="bg-text">my stats</span></h2>
+                <h2>About <span>me</span>
             </div>
             <div class="about-container">
                 <div class="left-about">
@@ -115,12 +115,12 @@
                     <p>
                         {{personal.desc | safe}}
                     </p>
-                    <div class="btn-con">
+                    {% comment %} <div class="btn-con">
                         <a href="media/{{personal.resume}}" download class="main-btn">
                             <span class="btn-text">Download CV</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
-                    </div>
+                    </div> {% endcomment %}
                 </div>
                 <div class="right-about">
                     <div class="about-item">
@@ -155,12 +155,12 @@
                     {% for sk in skill  %}
                     <div class="progress-bar">
                         <p class="prog-title">{{sk.name}}</p>
-                        <div class="progress-con">
+                        {% comment %} <div class="progress-con">
                             <p class="prog-text">{{sk.percentage}}%</p>
                             <div class="progress">
                                 <span class="html"></span>
                             </div>
-                        </div>
+                        </div> {% endcomment %}
                     </div>
                     {% endfor %}
                     
@@ -184,7 +184,7 @@
         </section>
         <section class="container" id="portfolio">
             <div class="main-title">
-                <h2>My <span>Portfolio</span><span class="bg-text">My Work</span></h2>
+                <h2>My <span>Portfolio</span></h2>
             </div>
             <p class="port-text">
                 Here is some of my work that I've done in various programming languages.
@@ -216,7 +216,7 @@
         <section class="container" id="blogs">
             <div class="blogs-content">
                 <div class="main-title">
-                    <h2>My <span>Blogs</span><span class="bg-text">My Blogs</span></h2>
+                    <h2>My <span>Blogs</span></h2>
                 </div>
                 <div class="blogs">
                     {% for bg in blog %}
@@ -244,7 +244,7 @@
         <section class="container" id="tags">
             <div class="blogs-content">
                 <div class="main-title">
-                    <h2>My <span>Categories</span><span class="bg-text">My Categories</span></h2>
+                    <h2>My <span>Categories</span></h2>
                 </div>
                 <div class='search-category'>
                     
@@ -279,7 +279,7 @@
         <section class="container contact" id="contact">
             <div class="contact-container">
                 <div class="main-title">
-                    <h2>Contact <span>Me</span><span class="bg-text">Contact</span></h2>
+                    <h2>Contact <span>Me</span></h2>
                 </div>
                 <div class="contact-content-con">
                     <div class="left-contact">
@@ -336,6 +336,9 @@
                                 </a>
                                 <a href={{personal.github}} target="_blank">
                                     <i class="fab fa-github"></i>
+                                </a>
+                                <a href={{personal.linkedin}} target="_blank">
+                                    <i class="fab fa-linkedin"></i>
                                 </a>
                                 <a href={{personal.youtube}} target="_blank">
                                     <i class="fab fa-youtube"></i>
