--- a/home/templates/category.html
+++ b/home/templates/category.html
@@ -75,6 +75,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{category.heading}}</title>
     <link rel="stylesheet" href="{% static 'css/styles.css'%}">
+    <link rel="shortcut icon" href="{% static '/images/favicon.ico' %}"/>
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
