--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -72,6 +72,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="shortcut icon" href="{% static '/images/favicon.ico' %}"/>
     <link rel="stylesheet" href="{% static 'css/styles.css'%}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -83,6 +84,7 @@
  <body class="main-content">
     <header class="container header active" id="home">
         <div class="header-content">
+    
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
