Adding assests folder

--- a/home/templates/category.html
+++ b/home/templates/category.html
@@ -96,14 +96,14 @@
             </div>
             <span>Last edited : {{category.date}}</span>
             <div class="category">
-                <img src="/media/{{category.image}}" alt={{bg.title}}>
+                <img src="{{category.image}}" alt={{bg.title}}>
                 <p>{{category.desc}}</p>
             </div>
             <div class="slider owl-carousel">
                 {% for bg in blog %}
                 <div class="card">
                     <div class="img">
-                        <img src="/media/{{bg.image}}" alt="{{bg.title}}">
+                        <img src="{{bg.image}}" alt="{{bg.title}}">
                     </div>
                     <div class="content">
                         <div class="title">
