--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -88,7 +88,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="/media/{{personal.image}}" alt="">
+                    <img src="{{personal.image}}" alt="Personal Image">
                 </div>
             </div>
             <div class="right-header">
@@ -98,7 +98,7 @@
                 </h1>
                 {% comment %} <p>{{personal.desc}}</p> {% endcomment %}
                 <div class="btn-con">
-                    <a href="/media/{{personal.resume}}" target="_blank" class="main-btn">
+                    <a href="{{personal.resume}}" target="_blank" class="main-btn">
                         <span class="btn-text">Download Resume</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
@@ -195,7 +195,7 @@
                 {% for prj in project %}
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="media/{{prj.image}}" alt="">
+                        <img src="{{prj.image}}" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>{{prj.title}}</h3>
@@ -223,7 +223,7 @@
                 <div class="blogs">
                     {% for bg in blog %}
                     <div class="blog">
-                        <img src="/media/{{bg.image}}" alt={{bg.title}}>
+                        <img src="{{bg.image}}" alt={{bg.title}}>
                         <div class="blog-text">
                             <h4 onclick=handleBlog("{{bg.id}}")>
                                 {{bg.title}}
@@ -258,7 +258,7 @@
                 <div class="blogs" id="categories">
                     {% for cat in category %}
                     <div class="blog" id="category-{{cat.id}}" >
-                        <img src="/media/{{cat.image}}" alt={{cat.heading}}>
+                        <img src="{{cat.image}}" alt={{cat.heading}}>
                         <div class="blog-text">
                             <h4 id="cat-title-{{cat.id}}" onclick=handleTag("{{cat.heading}}")>
                                 {{cat.heading}}
