--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -88,7 +88,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="{{personal.image}}" alt="Personal Image">
+                    <img src="https://raw.githubusercontent.com/dhruvil-shah/BlogWebsite/4bfd7456f1ae180788cdecb9b85c9f50a9d7e047/assets/blog1.jpg" alt="Personal Image">
                 </div>
             </div>
             <div class="right-header">
