--- a/home/static/css/styles.css
+++ b/home/static/css/styles.css
@@ -1010,12 +1010,12 @@ section {
 }
 .personal-desc{
   margin: 1rem;
+  
 }
 .personal-desc>p{
-  background-color: var(--color-primary);
-  color: var(--color-white);
-  padding: 1rem;
-  border-radius: 3rem;
+  /* background-color: var(--color-primary); */
+  /* color: var(--color-white); */
+  /* border-radius: 1rem;  */
 }
 .connect-button>a{
   display: flex;
