some external changes

--- a/home/templates/showblog.html
+++ b/home/templates/showblog.html
@@ -104,7 +104,7 @@
         <div class="content">
           <div class="title">{{bg.title}}</div>
           <div class="btn">
-            <button onclick="handleBlogs({{bg.id}})">Read more</button>
+            <a href="/blog/{{bg.title}}" target="_blank"><button>Read more</button></a>
           </div>
         </div>
       </div>
