--- a/home/templates/showblog.html
+++ b/home/templates/showblog.html
@@ -38,9 +38,29 @@
     
   </head>
 
-  <body class="main-content">
+  <body class="main-content1">
+    <div class="sidebar">
+      <div class="profile-image"><img src="{{personal.image}}" /></div>
+      <div class="personal-desc"><p>{{personal.desc | safe}}</p></div>
+      <div class="connect-text">Connect with me</div>
+      <div class="connect-button">
+        <a href="{{personal.linkedin}}" target="_blank">
+          <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="{{personal.twitter}}" target="_blank">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="{{personal.github}}" target="_blank">
+          <i class="fab fa-github"></i>
+        </a>
+        <a href="{{personal.youtube}}" target="_blank">
+          <i class="fab fa-youtube"></i>
+        </a>
+      </div>
+  </div>
     <div class="main-tag">
       <div class="category-description">
+        
         <div
           class="main-title-blog"
           style="margin-top: 3rem; align-self: center; margin: 4rem"
@@ -67,32 +87,7 @@
         </div>
       </div>
 
-      <div class="sidebar">
-        <div class="profile-image"><img src="{{personal.image}}" /></div>
-        <div class="personal-desc"><p>{{personal.desc | safe}}</p></div>
-        <div class="connect-text">Connect with me</div>
-        <div class="connect-button">
-          <a href="{{personal.facebook}}" target="_blank">
-            <i class="fab fa-facebook-f"></i>
-          </a>
-          <a href="{{personal.twitter}}" target="_blank">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="{{personal.github}}" target="_blank">
-            <i class="fab fa-github"></i>
-          </a>
-          <a href="{{personal.youtube}}" target="_blank">
-            <i class="fab fa-youtube"></i>
-          </a>
-        </div>
-        {% comment %} <div class="connect-text-tag">All Tags</div>
-        <div class="side-tags">
-          {% for tag in category %}
-          <a href="/category/{{tag}}" class="blog-tag">{{tag}}</a>
-          {% endfor %}
-        </div>
-       </div> {% endcomment %}
-    </div>
+      
   </div>
     <div class="slider owl-carousel">
       {% for bg in blog %}
@@ -104,7 +99,7 @@
         <div class="content">
           <div class="title">{{bg.title}}</div>
           <div class="btn">
-            <a href="/blog/{{bg.title}}" target="_blank"><button>Read more</button></a>
+            <a href="/blog/{{bg.title}}" ><button>Read more</button></a>
           </div>
         </div>
       </div>
@@ -115,6 +110,9 @@
     <div class="theme-btn">
       <i class="fas fa-adjust"></i>
     </div>
+    <div class="theme-btn1">
+      <i class="fa-sharp fa-solid fa-arrow-left-long"></i>
+  </div>
     <script>
       var disqus_config = function () {
         this.page.url = 'http://127.0.0.1:8000/blog/{{blogid.id}}';
