--- a/home/static/css/styles.css
+++ b/home/static/css/styles.css
@@ -4,6 +4,7 @@
   padding: 0;
   box-sizing: border-box;
   list-style: none;
+  scroll-behavior: smooth;
 }
 
 :root {
@@ -138,31 +139,31 @@ header {
   padding: 0 !important;
 }
 
-section {
+/* section {
   min-height: 100vh;
   width: 100%;
   position: absolute;
   left: 0;
   top: 0;
   padding: 3rem 18rem;
-}
+} */
 
 .container {
-  display: none;
-  transform: translateY(-100%) scale(0);
+   /* transform: translateY(-100%) scale(0); */
   transition: all 0.4s ease-in-out;
   background-color: var(--color-primary);
+  display: block;
 }
 
 .container-category {
   display: block;
 }
 
-.active {
+/* .active {
   display: block;
   animation: appear 1s ease-in-out;
   transform: translateY(0) scaleY(1);
-}
+} */
 
 @keyframes appear {
   0% {
@@ -233,12 +234,20 @@ section {
 .controls .active-btn i {
   color: var(--color-white);
 }
+.search{
+  display: flex;
+  flex-direction: row;
+  background-color: black;
+}
 
 .search-category {
+  /* background-color: red; */
   margin-top: 4rem;
   justify-content: center;
+  align-items: center;
+  /* background-color: red; */
   display: flex;
-  gap: 2rem;
+  gap: 1rem;
   flex-direction: row;
 }
 #search-btn{
@@ -262,10 +271,28 @@ section {
 
 .theme-btn {
   z-index: 10;
-  top: 2%;
-  left: 2%;
-  width: 70px;
-  height: 70px;
+  top: 1%;
+  /* left: 1%; */
+  right: 1%;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: var(--color-grey-4);
+  cursor: pointer;
+  position: fixed;
+  display: flex;
+  float: right;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 3px 15px rgba(0, 0, 0, 0.3);
+  transition: all 0.1s ease-in-out;
+}
+.theme-btn1 {
+  z-index: 10;
+  top: 1%;
+  left: 1%;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   background-color: var(--color-grey-4);
   cursor: pointer;
@@ -288,7 +315,7 @@ section {
   border: none;
 }
 
-.theme-btn i {
+.theme-btn i,.theme-btn1 i {
   font-size: 1.4rem;
   color: var(--color-grey-2);
   pointer-events: none;
@@ -710,6 +737,10 @@ section {
   border-top-right-radius: 5px;
   filter: grayscale(100%);
   transition: all 0.4s ease-in-out;
+  
+}
+#cat-img{
+  cursor: pointer;
 }
 
 .blogs .blog .blog-text {
@@ -722,7 +753,7 @@ section {
   font-size: 1.5rem;
   margin-bottom: 0.7rem;
   transition: all 0.4s ease-in-out;
-  cursor: pointer;
+  /* cursor: pointer; */
 }
 
 .blogs .blog .blog-text h4:hover {
@@ -942,8 +973,10 @@ section {
 .category-description {
   display: flex;
   flex-direction: column;
+  /* width: 100%; */
+  /* flex-wrap: wrap; */
   overflow-x: hidden;
-  flex: 3;
+  /* flex: 3; */
   align-items: center;
   gap: 1rem;
   margin: 1rem;
@@ -990,10 +1023,10 @@ section {
 
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 
-.main-tag{
+/* .main-tag{
   display: flex;
   flex-direction: row;
-}
+} */
 .profile-image{
   align-self: center;
   margin-top: 2rem;
@@ -1058,10 +1091,11 @@ section {
 }
 .sidebar{
   margin-top: 5rem;
-  flex: 1;
   display: flex;
   height: fit-content;
+  float: right;
   flex-direction: column;
+  width: 20rem;
   background-color: var(--color-secondary);
 }
 .main-title-blog {
@@ -1171,6 +1205,11 @@ section {
   .theme-btn {
     width: 50px;
     height: 50px;
+  }
+  .theme-btn1{
+    width: 50px;
+    height: 50px;
+    top: 10%;
   }
 
   .header-content {
