--- a/home/static/css/_media.scss
+++ b/home/static/css/_media.scss
@@ -85,10 +85,10 @@
         margin-top: 1rem;
     }
 
-    .blogs{
-        grid-template-columns: repeat(1, 1fr);
-        padding-bottom: 6rem;
-    }
+    // .blogs{
+    //     grid-template-columns: repeat(1, 1fr);
+    //     padding-bottom: 6rem;
+    // }
 
     .contact-content-con{
         flex-direction: column;
@@ -178,10 +178,10 @@
 
 
 @media screen and (max-width:1250px){
-    .blogs{
-        grid-template-columns: repeat(2, 1fr);
-        margin-top: 6rem;
-    }
+    // .blogs{
+    //     grid-template-columns: repeat(2, 1fr);
+    //     margin-top: 6rem;
+    // }
     .portfolios{
         grid-template-columns: repeat(2, 1fr);
     }
@@ -191,9 +191,9 @@
 
 }
 @media screen and (max-width:660px){
-    .blogs{
-        grid-template-columns: repeat(1, 1fr);
-    }
+    // .blogs{
+    //     grid-template-columns: repeat(1, 1fr);
+    // }
     .portfolios{
         grid-template-columns: repeat(1, 1fr);
     }
