--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -220,7 +220,7 @@
                 <div class="main-title">
                     <h2>My <span>Blogs</span></h2>
                 </div>
-                <div class="blogs">
+                <div class="blogs" id="blog-ct">
                     {% for bg in blog %}
                     <div class="blog">
                         <img src="{{bg.image}}" alt={{bg.title}}>
