--- a/home/static/css/styles.css
+++ b/home/static/css/styles.css
@@ -991,7 +991,7 @@ header {
   align-self: center;
 }
 
-.category>img {
+.leftbar>img {
   align-self: center;
   width: 50%;
   margin: 1rem;
@@ -1000,7 +1000,7 @@ header {
 
 }
 
-.category>img:hover {
+.leftbar>img:hover {
   transform: scale(1.1);
 }
 
@@ -1029,7 +1029,7 @@ header {
 } */
 .profile-image{
   align-self: center;
-  margin-top: 2rem;
+  margin-top: 1rem;
 }
 .profile-image>img{
   width: 11rem;
@@ -1049,7 +1049,8 @@ header {
   margin-bottom: 1rem;
 }
 .personal-desc{
-  margin: 1rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
   
 }
 .personal-desc>p{
@@ -1089,14 +1090,36 @@ header {
   color: var(--color-primary);
   font-size: 1.5rem;
 }
+.top-content{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
 .sidebar{
   margin-top: 5rem;
   display: flex;
   height: fit-content;
   float: right;
   flex-direction: column;
-  width: 20rem;
+  flex: 1;
+  border-radius: 0px 0px 0px 40px;
   background-color: var(--color-secondary);
+}
+.sidebar-down{
+  
+  display: none;
+  height: fit-content;
+  flex-direction: column;
+  background-color: var(--color-secondary);
+}
+.leftbar{
+  /* background-color: red; */
+  /* margin-top: 5rem; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  flex: 3;
 }
 .main-title-blog {
   text-align: center;
@@ -1113,10 +1136,11 @@ header {
   color: var(--color-secondary);
 }
 .slider{
-  max-width: 1100px;
+  max-width: 100%;
   display: flex;
+  /* padding: 3rem; */
   align-self: center;
-  margin: 2rem;
+  
 }
 .slider .card{
   flex: 1;
@@ -1432,6 +1456,17 @@ header {
   .main-title h2 .bg-text {
     font-size: 4.5rem;
   }
+  .sidebar{
+    display: none;
+  }
+  .sidebar-down{
+    display: flex;
+  }
+  .main-title-blog {
+    margin-top: 4rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
+  }
 }
 
 @media screen and (max-width: 970px) {
@@ -1520,4 +1555,22 @@ header {
   .main-title h2 .bg-text {
     font-size: 4rem;
   }
+  
+  .card .content .title{
+    font-size: 10px;
+    
+  }
+  /*
+   .slider .card {
+    height: 20rem;
+  } */
+  .slider .card .img{
+    height: 5rem;
+  }
+  .card .content .btn button{
+    font-size: 14px;
+    padding: 2px;
+  }
+  
+
 }
